# app

./: .dockerignore  .env.example  .gitignore  .replit  AGENTS.md  CLAUDE.md  Dockerfile  LANDING_UPGRADE_PLAN.md  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  tailwind.config.ts  threat_model.md  vitest.config.ts
.agents/memory/: MEMORY.md  api-server-db-composite.md  circle-status-mismatch.md  circles-delete.md  drizzle-push-tty.md  (+38 more)
.github/: dependabot.yml
attached_assets/: Pasted--MoolaHub-Contracts-Base-Sepolia-Deployment-Runbook-A-s_1780727333255.txt  Pasted-You-are-a-senior-product-designer-senior-React-frontend_1783285384467.txt  Pasted-You-are-acting-as-the-Product-Manager-CTO-of-Moolahub-l_1783006267420.txt  Pasted-You-are-an-expert-full-stack-developer-working-on-the-M_1781069778954.txt  Pasted-You-are-doing-a-copy-grammar-pass-on-the-Moolahubio-app_1780859627448.txt  Pasted-You-are-working-in-the-Moolahubio-app-monorepo-Build-th_1780780019561.txt
contracts/: .gitignore  DEPLOYMENT.md  README.md  foundry.toml  slither.config.json
docs/: BASE_ACCOUNT.md  ONRAMP.md  base-mainnet-architecture.md  monad-build-plan.md  monad-claude-code-kickoff.md  monad-migration-plan.md  referral-program.md  replit-base-mainnet-build-prompt.md  replit-monad-deploy-prompt.md
prisma/: schema.prisma  seed.ts
scripts/: base-init.ts  check-copy.mjs  setup-git-ssh.sh  stellar-init.ts
test/: chain.test.ts  helpers.ts  ledger.test.ts  scheduler.test.ts  setup.ts  susu.test.ts
(+398 files in other folders)
