[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "slither-analyzer>=0.11.5",
]

[tool.uv]
# aiohttp is pulled in transitively (via slither-analyzer's web3 stack). Constrain
# it to the patched release that clears the flagged CVEs (PYSEC-2026-237 et al.).
constraint-dependencies = [
    "aiohttp>=3.14.1",
]
